--- a/templates/main_navbar.html
+++ b/templates/main_navbar.html
@@ -3,8 +3,9 @@
 <!-- Header Section -->
 <header class="header">
     <div class="container container--narrow">
-        <a href="{% url 'account' %}" class="header__logo">
+        <a href="{% url 'user-profile' %}" class="header__logo">
             {% comment %} <img src="{% static 'images/logo.svg' %} " alt="DevSearch Logo" /> {% endcomment %}
+            <h6 style="color:white; font-weight:bold">Local Source</h6
         </a>
 
         <nav class="header__nav">
@@ -20,7 +21,7 @@
 
                 {% if request.user.is_authenticated %}
                 <li class="header__menuItem"><a href="{% url 'inbox' %}">Inbox</a></li>
-                <li class="header__menuItem"><a href="{% url 'account' %}">Account</a></li>
+                <li class="header__menuItem"><a href="{% url 'user-profile' %}">Account</a></li>
                 <li class="header__menuItem"><a href="{% url 'logout' %}" class="btn btn--sub">Logout</a></li>
                 {% else %}
                 <li class="header__menuItem"><a href="{% url 'login' %}" class="btn btn--sub">Login/Sign Up</a></li>
