completed single business page

--- a/Users/templates/Users/home.html
+++ b/Users/templates/Users/home.html
@@ -38,8 +38,7 @@
                                         {{business.owner.first_name}} {{business.owner.last_name}}</a>
                                 </p>
                                 <p class="business--rating">
-                                    <span style="font-weight: bold;">{{business.vote_ratio}}%</span> Positive
-                                    Feedback ({{business.vote_total}}) Vote{{business.vote_total|pluralize:"s"}}
+                                    <span style="font-weight: bold;">{{business.vote_ratio}}%</span> Satisfactory  ({{business.vote_total}}) Vote{{business.vote_total|pluralize:"s"}}
                                 </p>
                                 <div class="business__categories">
                                     <br><p style="margin-bottom:5px">Category</p>
