--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -507,6 +507,20 @@ img {
   color: var(--color-sub-light);
 }
 
+.business__gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 1rem;
+}
+
+.business__gallery img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
+
+
 .businessesList {
   margin-top: 8rem;
 }
