--- a/Users/templates/Users/account.html
+++ b/Users/templates/Users/account.html
@@ -1,4 +1,65 @@
-{% extends "main.html" %}
+{% extends 'main.html' %}
+
 {% block content %}
+
+<!-- Main Section -->
+<main class="settingsPage profile my-md">
+  <div class="container">
+    <div class="layout">
+      <div class="column column--1of3">
+        <div class="card text-center">
+          <div class="card__body dev">
+            <a class="tag tag--pill tag--main settings__btn" href="{% url 'edit-account' %}"><i class="im im-edit"></i>
+              Edit</a>
+            <img class="avatar avatar--xl dev__avatar" src="{{profile.imageURL}}" />
+            <h2 class="dev__name">{{profile.first_name}} {{profile.last_name}}</h2>
+            <p class="dev__location">Username {{profile.username}}</p>
+            <br>
+            <hr>
+            <br>
+            <p class="dev__title">Phone: 
+                <a href="tel:+{{profile.phone_number}}"">{{profile.phone_number}}</a>
+            </p>
+            <p class="dev__title">Email: <a href="mailto:{{profile.email}}"">{{profile.email}}</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="column column--2of3">
+        <div class="devInfo">
+          <h3 class="devInfo__title">About Me</h3>
+          <p class="devInfo__about">{{profile.bio}}</p>
+        </div>
+
+        <div class="settings">
+          <h3 class="settings__title">Businesses</h3>
+          <a class="tag tag--pill tag--main settings__btn tag--lg" href="{% url 'create-business' %}"><i
+              class="im im-plus"></i> Add business</a>
+        </div>
+
+        <table class="settings__table">
+          {% for business in businesses %}
+          <tr>
+            <td class="settings__thumbnail">
+              <a href="{% url 'single-business' business.id %}"><img src="{{business.imageURL}}" alt="business Thumbnail" /></a>
+            </td>
+            <td class="settings__tableInfo">
+              <a href="{% url 'single-business' business.id %}">{{business.title}}</a>
+              <p>{{business.description|slice:"150"}}</p>
+            </td>
+            <td class="settings__tableActions">
+              <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-business' business.id %}"><i
+                  class="im im-edit"></i> Edit</a>
+              <a class="tag tag--pill tag--main settings__btn"
+                href="{% url 'delete-business'  business.id %}?next=/account"><i class="im im-x-mark-circle-o"></i>
+                Delete</a>
+            </td>
+          </tr>
+          {% endfor %}
+
+        </table>
+      </div>
+    </div>
+  </div>
+</main>
 
 {% endblock %}
