--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -74,6 +74,18 @@ img {
   pointer-events: all;
 }
 
+.business-tag {
+  cursor: pointer;
+  user-select: none;
+  transition: all 0.2s ease;
+}
+
+.business-tag.selected {
+  background-color: #16a34a;
+  color: white;
+  border-color: #16a34a;
+}
+
 .business--thumbnail {
   height: 100px;
   object-fit: cover;
@@ -507,7 +519,7 @@ img {
   color: var(--color-sub-light);
 }
 
-.business__gallery {
+/* .business__gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   gap: 1rem;
@@ -518,7 +530,52 @@ img {
   height: 180px;
   object-fit: cover;
   border-radius: 0.5rem;
+} */
+
+.business__gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  position: relative;
 }
+
+/* Thumbnails */
+.gallery-item {
+  width: 120px;
+  height: 120px;
+  overflow: hidden;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 1px solid #ddd;
+  position: relative;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.2s ease;
+}
+
+/* Hover preview container */
+#hover-preview {
+  position: fixed;
+  margin-top: 200px;
+  right: 700px;
+  display: none;
+  pointer-events: none;
+  object-fit: cover;
+  z-index: 999;
+}
+
+#hover-preview img {
+  max-height: 600px;
+  width: auto;
+  border-radius: 10px;
+  /* border: 10px solid white; */
+  box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
+
 
 
 .businessesList {
